--- a/docs/resources/docker.md.erb
+++ b/docs/resources/docker.md.erb
@@ -46,68 +46,7 @@ where
 
 <br>
 
-## Supported Resource Parameters
-
-* `commands`, `ids`, `images`, `labels`, `local_volumes`, `mounts`, `names`, `networks`, `ports`, `sizes`  and `'status'` are valid parameters for `containers`
-
-<br>
-
-## Resource Parameter Examples
-
-### containers
-
-`containers` returns information about containers as returned by [docker ps -a](https://docs.docker.com/engine/reference/commandline/ps/). You can determine specific information about
-
-    describe docker.containers do
-      its('ids') { should include 'sha:71b5df59...442b' }
-      its('commands') { should_not include '/bin/sh' }
-      its('images') { should_not include 'u12:latest' }
-      its('ports') { should include '0.0.0.0:1234->1234/tcp' }
-      its('labels') { should include 'License=GPLv2,Vendor=CentOS' }
-    end
-
-
-### images
-
-`images` returns information about docker image as returned by [docker images](https://docs.docker.com/engine/reference/commandline/images/). You can determine specific information about
-
-    describe docker.images do
-      its('ids') { should include 'sha:12b5df59...442b' }
-      its('repositories') { should_not include 'my_image' }
-      its('tags') { should_not include 'unwanted_tag' }
-      its('sizes') { should_not include "1.41 GB" }
-    end
-
-### version
-
-`info` returns the parsed result of [docker version](https://docs.docker.com/engine/reference/commandline/version/)
-
-    describe docker.version do
-      its('Server.Version') { should cmp >= '1.12'}
-      its('Client.Version') { should cmp >= '1.12'}
-    end
-
-
-### info
-
-`info` returns the parsed result of [docker info](https://docs.docker.com/engine/reference/commandline/info/)
-
-    describe docker.info do
-      its('Configuration.Path') { should eq 'value' }
-    end
-
-
-### object('id')
-
-`object` returns low-level information about docker objects. It is calling [docker inspect](https://docs.docker.com/engine/reference/commandline/info/) under the hood.
-
-    describe docker.object(id) do
-      its('Configuration.Path') { should eq 'value' }
-    end
-
-<br>
-
-## Property Examples
+## Examples
 
 The following examples show how to use this InSpec audit resource.
 
@@ -167,6 +106,112 @@ and then run:
 Or execute the profile directly via URL:
 
     $ inspec exec https://github.com/dev-sec/cis-docker-benchmark
+
+<br>
+
+## Supported Resource Parameters
+
+* `commands`, `ids`, `images`, `labels`, `local_volumes`, `mounts`, `names`, `networks`, `ports`, `sizes`  and `'status'` are valid parameters for `containers`
+
+<br>
+
+## Resource Parameter Examples
+
+### containers
+
+`containers` returns information about containers as returned by [docker ps -a](https://docs.docker.com/engine/reference/commandline/ps/). You can determine specific information about
+
+    describe docker.containers do
+      its('ids') { should include 'sha:71b5df59...442b' }
+      its('commands') { should_not include '/bin/sh' }
+      its('images') { should_not include 'u12:latest' }
+      its('ports') { should include '0.0.0.0:1234->1234/tcp' }
+      its('labels') { should include 'License=GPLv2,Vendor=CentOS' }
+    end
+
+### images
+
+`images` returns information about docker image as returned by [docker images](https://docs.docker.com/engine/reference/commandline/images/). You can determine specific information about
+
+    describe docker.images do
+      its('ids') { should include 'sha:12b5df59...442b' }
+      its('repositories') { should_not include 'my_image' }
+      its('tags') { should_not include 'unwanted_tag' }
+      its('sizes') { should_not include "1.41 GB" }
+    end
+
+### version
+
+`info` returns the parsed result of [docker version](https://docs.docker.com/engine/reference/commandline/version/)
+
+    describe docker.version do
+      its('Server.Version') { should cmp >= '1.12'}
+      its('Client.Version') { should cmp >= '1.12'}
+    end
+
+
+### info
+
+`info` returns the parsed result of [docker info](https://docs.docker.com/engine/reference/commandline/info/)
+
+    describe docker.info do
+      its('Configuration.Path') { should eq 'value' }
+    end
+
+
+### object('id')
+
+`object` returns low-level information about docker objects. It is calling [docker inspect](https://docs.docker.com/engine/reference/commandline/info/) under the hood.
+
+    describe docker.object(id) do
+      its('Configuration.Path') { should eq 'value' }
+    end
+
+<br>
+
+## Properties
+
+* `id`, `image`, `repo`, `tag`, `ports`, `command`
+
+<br>
+
+## Property Examples
+
+### id
+
+    describe docker_container(name: 'an-echo-server') do
+      its('id') { should_not eq '' }
+    end
+
+### image
+
+  describe docker_container(name: 'an-echo-server') do
+    its('image') { should eq 'busybox:latest' }
+  end
+
+### repo
+
+    describe docker_container(name: 'an-echo-server') do
+      its('repo') { should eq 'busybox' }
+    end
+
+### tag
+
+    describe docker_container(name: 'an-echo-server') do
+      its('tag') { should eq 'latest' }
+    end
+
+### ports
+
+    describe docker_container(name: 'an-echo-server') do
+      its('ports') { should eq "0.0.0.0:1234->1234/tcp" }
+    end
+
+### command
+
+    describe docker_container(name: 'an-echo-server') do
+      its('command') { should eq 'nc -ll -p 1234 -e /bin/cat' }
+    end
 
 <br>
 
